# article-flow

./: .gitignore  README.md  start-tauri.sh  start.sh  去AI味写作指南.md
backend/: .env.example  app_mem.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  article_format.py  config.py  config_loader.py  content_loader.py  decorators.py  utils.py  utils_markdown.py  utils_outline.py  utils_ssrf.py  utils_words.py  utils_writing_sanitize.py
backend/app/models/: __init__.py
backend/app/prompts/: __init__.py  writing_intent.py  writing_quality.py  writing_style.py  writing_style_intensity.py
backend/config/: anti_ai_rules.yaml  platforms.yaml  review_passes.yaml  workspaces.yaml  writing_intents.yaml  writing_modes.yaml  writing_styles.yaml
backend/data/: README.md  outlines.json  playbook_learnings.json  project_contents.json  projects.json  topics.json  version_history.json
backend/tests/: conftest.py  test_anti_ai_service.py  test_anti_ai_style_limits.py  test_api.py  test_article_format.py  test_content_eval.py  test_deep_analysis_service.py  test_draft_version_service.py  test_hotnews_service.py  test_llm_streaming.py  test_outline_writing.py  test_playbook.py  test_projects_snapshot.py  test_step_migration.py  test_style_context.py  test_style_rewrite_service.py  test_utils.py  test_utils_markdown.py  test_utils_ssrf.py  test_writing_agents.py  test_writing_brief.py  test_writing_intent.py  test_writing_sanitize.py  test_writing_style_intensity.py  test_writing_styles_api.py  test_writing_styles_config.py  test_writing_word_budget.py
(+164 files in other folders)
