[project]
name = "article-flow-backend"
version = "0.1.0"
description = "AI 全流程文章写作后端"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0,<4.0.0",
    "flask-cors>=4.0.0,<5.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "langchain>=0.1.0,<1.0.0",
    "langchain-openai>=0.0.2,<1.0.0",
    "langchain-anthropic>=0.1.0,<1.0.0",
    "langchain-core>=0.1.0,<1.0.0",
    "openai>=1.6.0,<2.0.0",
    "anthropic>=0.18.0,<1.0.0",
    "requests>=2.31.0,<3.0.0",
    "beautifulsoup4>=4.12.2,<5.0.0",
    "markdown>=3.5.1,<4.0.0",
    "pypdf>=3.17.4,<5.0.0",
    "pillow>=10.1.0,<12.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "premailer>=3.10.0,<4.0.0",
    "markdown-it-py>=4.0.0,<5.0.0",
    "pygments>=2.20.0,<3.0.0",
    "tavily-python>=0.5.0,<1.0.0",
    "ddgs>=9.0.0,<10.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0,<9.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]